RESOLVED FIXED 287180
Display warning message when unloading is throttled.
https://bugs.webkit.org/show_bug.cgi?id=287180
Summary Display warning message when unloading is throttled.
Basuke Suzuki
Reported 2025-02-06 13:56:43 PST
If throttler decides not to grant the unloading, currently it is simply ignored. Add console warning to report the trial happens.
Attachments
Basuke Suzuki
Comment 1 2025-02-06 13:56:55 PST
Basuke Suzuki
Comment 2 2025-02-06 16:21:44 PST
EWS
Comment 3 2025-02-07 11:28:34 PST
Committed 290028@main (ba40879e6a92): <https://commits.webkit.org/290028@main> Reviewed commits have been landed. Closing PR #40169 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.