Display warning message when unloading is throttled. https://bugs.webkit.org/show_bug.cgi?id=287180 rdar://144335494

Reviewed by Chris Dumez.

If throttler decides not to grant the unloading, currently it is simply ignored.
Add console message to report the network usage exceed warning.

* LayoutTests/http/tests/iframe-monitor/resources/iframe--eligible--3.html: Added.
* LayoutTests/http/tests/iframe-monitor/resources/monitor-setup.js:
(async setup):
* LayoutTests/http/tests/iframe-monitor/throttler-expected.txt: Added.
* LayoutTests/http/tests/iframe-monitor/throttler.html: Added.
* Source/WebCore/loader/ResourceMonitorThrottler.cpp:
(WebCore::ResourceMonitorThrottler::create):
* Source/WebCore/loader/ResourceMonitorThrottler.h:
* Source/WebCore/page/LocalFrame.cpp:
(WebCore::LocalFrame::reportResourceMonitoringWarning):
* Source/WebCore/page/LocalFrame.h:
* Source/WebKit/UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
(WKWebsiteDataStoreResetResouceMonitorThrottler):
* Source/WebKit/UIProcess/API/C/WKWebsiteDataStoreRef.h:
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::resourceMonitorThrottler):
(WebKit::WebsiteDataStore::resetResourceMonitorThrottlerForTesting):
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.h:
(WebKit::WebsiteDataStore::resourceMonitorThrottler): Deleted.
* Source/WebKit/WebProcess/WebCoreSupport/WebLocalFrameLoaderClient.cpp:
(WebKit::WebLocalFrameLoaderClient::didExceedNetworkUsageThreshold):
* Tools/TestWebKitAPI/Tests/WebCore/ResourceMonitor.cpp:
(TestWebKitAPI::ResourceMonitorTest::prepareThrottler):
(TestWebKitAPI::ResourceMonitorTest::disposeThrottler):
(TestWebKitAPI::ResourceMonitorTest::throttler):
(TestWebKitAPI::ResourceMonitorTest::tryAccess):
(TestWebKitAPI::TEST_F(ResourceMonitorTest, ThrottlerBasic)):
(TestWebKitAPI::TEST_F(ResourceMonitorTest, ThrottlerMaxHosts)):
(TestWebKitAPI::TEST_F(ResourceMonitorTest, ThrottlerLeastRecentAccessedHostWillBeRemoved)):
(TestWebKitAPI::TEST_F(ResourceMonitorTest, ThrottlerEmptyHostname)):
(TestWebKitAPI::ResouceMonitorTest::now): Deleted.
(TestWebKitAPI::ResouceMonitorTest::later): Deleted.
(TestWebKitAPI::TEST_F(ResouceMonitorTest, ThrottlerBasic)): Deleted.
(TestWebKitAPI::TEST_F(ResouceMonitorTest, ThrottlerMaxHosts)): Deleted.
(TestWebKitAPI::TEST_F(ResouceMonitorTest, ThrottlerLeastRecentAccessedHostWillBeRemoved)): Deleted.
(TestWebKitAPI::TEST_F(ResouceMonitorTest, ThrottlerEmptyHostname)): Deleted.
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

Canonical link: https://commits.webkit.org/290028@main